   using the 'supportpath' setting, either on a global basis or on a peer basis.
   This setting enables Asterisk to route outgoing out-of-dialog requests via a
   set of proxies by using a pre-loaded route-set defined by the Path headers in
   the REGISTER request. See Realtime updates for more configuration information.


Functions
------------------

JITTERBUFFER
------------------
 * JITTERBUFFER now accepts an argument of 'disabled' which can be used
   to remove jitterbuffers previously set on a channel with JITTERBUFFER.
   The value of this setting is ignored when disabled is used for the argument.

CDR (function)
------------------
 * The 'amaflags' and 'accountcode' attributes for the CDR function are
   deprecated. Use the CHANNEL function instead to access these attributes.
 * The 'l' option has been removed. When reading a CDR attribute, the most
   recent record is always used. When writing a CDR attribute, all non-finalized
   CDRs are updated.
 * The 'r' option has been removed, for the same reason as the 'l' option.
 * The 's' option has been removed, as LOCKED semantics no longer exist in the
   CDR engine.

CDR_PROP
------------------
 * A new function CDR_PROP has been added. This function lets you set properties
   on a channel's active CDRs. This function is write-only. Properties accept
   boolean values to set/clear them on the channel's CDRs. Valid properties
   include:
   * 'party_a' - make this channel the preferred Party A in any CDR between two
     channels. If two channels have this property set, the creation time of the
     channel is used to determine who is Party A. Note that dialed channels are
     never Party A in a CDR.
   * 'disable' - disable CDRs on this channel. This is analogous to the NoCDR
     application when set to True, and analogous to the 'e' option in ResetCDR
     when set to False.


Resources
------------------

RTP
------------------